# vsn-framework

./: .gitignore  LICENSE  pyproject.toml
VGB/: pyproject.toml
VGB/configs/infer/: batch.yaml
VGB/configs/model/: vsn_base.yaml  vsn_large.yaml  vsn_small.yaml
VGB/configs/train/: fsdp2.yaml  single_gpu.yaml
VGB/src/vgb/: __init__.py
VGB/src/vgb/cli/: __init__.py  main.py
VGB/src/vgb/config/: __init__.py  loader.py  schema.py
VGB/src/vgb/data/: __init__.py  adapters.py  collate.py
VGB/src/vgb/export/: __init__.py  bundle_export.py
VGB/src/vgb/inference/: __init__.py  predictor.py
VGB/src/vgb/runtime/: __init__.py  activation_checkpointing.py  amp.py  bootstrap.py  checkpointing.py  fsdp.py
VGB/src/vgb/training/: __init__.py  loops.py  metrics.py  trainer.py
VGB/tests/: conftest.py  test_activation_checkpointing.py  test_amp.py  test_bootstrap.py  test_bundle_export.py  test_checkpointing.py  test_config_loader.py  test_config_schema.py  test_fsdp.py  test_predictor.py  test_training.py
VGB/tests/distributed/: __init__.py  conftest.py  test_dcp.py  test_fsdp2.py
VGB/tests/property/: test_config_properties.py
VGB/tests/smoke/: __init__.py  test_amp.py  test_checkpoint.py  test_cli.py  test_single_gpu.py
VSN/: pyproject.toml
VSN/src/vsn/: __init__.py
VSN/src/vsn/contracts/: __init__.py  multimodal.py  outputs.py
VSN/src/vsn/core/: __init__.py  config.py  decoder.py  encoder.py  input_cache.py  invariants.py  latent.py  model.py  positioning.py  psi.py  rms_norm.py  transitions.py  vgb.py  vgb_v2.py  vgb_v3.py
VSN/src/vsn/formats/: __init__.py  bundle.py
VSN/src/vsn/heads/: __init__.py  base.py  classification.py  dense.py  regression.py  text.py
VSN/src/vsn/io/: __init__.py  save_load.py  (+1 more)
VSN/tests/: __init__.py  conftest.py  test_vgb_v1_quick.py
VSN/tests/integration/: __init__.py  test_export_import.py  test_full_forward.py  test_training_loop.py
VSN/tests/property/: __init__.py  test_bundle_properties.py  test_cache_properties.py  test_contracts_properties.py  test_decoder_properties.py  test_encoder_properties.py  test_head_properties.py  test_latent_properties.py  test_loss_properties.py  test_model_properties.py  test_psi_properties.py  test_vgb_properties.py
VSN/tests/unit/: test_bundle.py  test_config.py  test_decoder.py  test_encoder.py  test_heads_base.py  test_heads_task.py  test_input_cache.py  test_latent.py  test_losses.py  test_model.py  test_positioning.py  test_psi.py  test_rms_norm.py  test_save_load.py  test_state_schema.py  test_text_head.py  test_transitions.py
vsn-framework/: pyproject.toml
vsn-framework/src/vsn_framework/: __init__.py  api.py  cli.py
(+17 files in other folders)
