[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vsn"
version = "0.1.1"
description = "VSN (Volumetric Sequential Network) — core mathematical library"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "torch>=2.0",
    "typing_extensions>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "hypothesis>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]
